--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "alembic>=1.17.2",
     "fastapi>=0.127.0",
     "psycopg[binary]>=3.3.2",
-    "pydantic>=2.12.5",
+    "pydantic[email]>=2.12.5",
     "pydantic-settings>=2.12.0",
     "sqlalchemy[asyncio]>=2.0.45",
     "uvicorn>=0.40.0",
+    "orjson>=3.11.5",
+    "bcrypt==5.0.0",
 ]
