--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.17.2",
     "fastapi>=0.127.0",
-    "psycopg[binary]>=3.3.2",
+    "psycopg[binary,pool]>=3.3.2",
     "pydantic[email]>=2.12.5",
     "pydantic-settings>=2.12.0",
     "sqlalchemy[asyncio]>=2.0.45",
@@ -15,4 +15,6 @@ dependencies = [
     "orjson>=3.11.5",
     "bcrypt==5.0.0",
     "redis>=7.1.0",
+    "pyjwt>=2.10.1",
+    "python-multipart>=0.0.21",
 ]
